--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,27 @@ alembic==1.14.0
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
+exceptiongroup==1.2.2
 Flask==3.1.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+freezegun==1.5.1
 greenlet==3.1.1
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 MarkupSafe==3.0.2
+packaging==24.2
+pillow==11.1.0
+pluggy==1.5.0
 psycopg2-binary==2.9.10
+pytest==8.3.4
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 pytz==2024.2
+six==1.17.0
 SQLAlchemy==2.0.36
+tomli==2.2.1
 typing_extensions==4.12.2
 Werkzeug==3.1.3
